# TEQUAL

./: .gitignore  LICENSE  Makefile  README.md  generate_experiments.py  loader.py  logger.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
datasets/: base_dataset.py  gnn_benchmark.py  manifold.py  modelnet.py  tu.py
experiment/custom_example/: config.yaml
metrics/: metrics.py
models/: base_model.py  custom_model.py
src/: config.py  generate_experiments.py  main.py  pesto_test.py  quotient.py  setup.py  stability.py  train.py
src/analysis/: anomaly_detection.py  centroid_comparison.py  diagram_bounds.py  geometric_similarity.py  ripserer.py  sensitivity.py  similarity.py  stability.py
src/datasets/: base_dataset.py  celebA.py  cifar10.py  fashion_mnist.py  lfw_people.py  mnist.py  teapots.py  xyc.py
src/generation/: config.py  generate_experiments.py  main.py
src/generation/datasets/: mnist.py
src/generation/loaders/: factory.py
src/generation/metrics/: metrics.py
src/generation/models/: __init__.py  cvae.py  vanilla_ae.py  vanilla_vae.py
src/generation/utils/: __init__.py
src/loaders/: factory.py
src/loggers/: logger.py
src/metrics/: metrics.py
src/models/: __init__.py  base.py  beta_vae.py  betatc_vae.py  dae.py  dip_vae.py  fvae.py  info_vae.py  linear_vae.py  test_vae.py  vanilla_vae.py  wae_mmd.py
src/notebooks/: dae_figure.ipynb  distance_explorations.ipynb
src/scripts/: trainer.sh
src/topology/: pesto.py  tequal.py
src/utils/: __init__.py
src/vis/: __init__.py
